[gd_scene load_steps=3 format=3 uid="uid://dsectoey3e0oq"]

[ext_resource type="Script" uid="uid://dpttn8pogiu2n" path="res://game_scene.gd" id="1_mlf6e"]

[sub_resource type="CanvasTexture" id="CanvasTexture_mlf6e"]

[node name="GameScene" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_mlf6e")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(540, 960)
layout_mode = 2
offset_top = -1.0
offset_right = 540.0
offset_bottom = 959.0
texture = SubResource("CanvasTexture_mlf6e")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_top = -2.0
offset_right = 540.0
offset_bottom = 955.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="NumberLabel" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IncreaseButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Click me!"

[node name="SaveButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Save Game"

[connection signal="pressed" from="CenterContainer/VBoxContainer/IncreaseButton" to="." method="_on_increase_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
